# Production-AI-Agents-with-LangChain-LangGraph-2026

./: README.md
Section2/: links.txt
Section3/lab/: smart_qa_bot.ipynb
Section4/resources/: chains_v1.py
Section5/: chroma_db_version.txt
Section9/resources/: links.txt
langc-course/: core_concepts.py  main.py  pyproject.toml  working_with_llms.py
